fix: check for database existance before triggering the data seeding

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,9 +65,9 @@
         <div class="container">
           <div class="row">
             <div class="border border-dark col font-weight-bold">Date</div>
-            <div class="border border-dark col font-weight-bold">Comission</div>
-            <div class="border border-dark col font-weight-bold">Sales</div>
-            <div class="border border-dark col font-weight-bold">Leads</div>
+            <div class="border border-dark col font-weight-bold">Comission - Total</div>
+            <div class="border border-dark col font-weight-bold">Sales - Net</div>
+            <div class="border border-dark col font-weight-bold">Leads - Net</div>
             <div class="border border-dark col font-weight-bold">Clicks</div>
             <div class="border border-dark col font-weight-bold">EPC</div>
             <div class="border border-dark col font-weight-bold">Impressions</div>
